--- a/index.html
+++ b/index.html
@@ -72,10 +72,30 @@
             <span id="our-services"></span>
         </section>
         <section>
-            <div class="our-services container" id="our-services">
-                <div class="row align-items-center splash-opacity">
-                    <div class="col-12 text-center">
-                        <h1 class="display-4 font-weight-normal tagline">OUR SERVICES</h1>
+            <div class="our-services container-fluid" id="our-services">
+                <div class="container">
+                    
+                    <div class="row align-items-center justify-content-center mb-md-5 text-center">
+                        <div class="col-sm service service-1">
+                            <p class="">OUR SERVICES</p>
+                        </div>
+                        <div class="col-sm service service-2">
+                            <p class="">OUR SERVICES</p>
+                        </div>
+                        <div class="col-sm service service-3">
+                            <p class="">OUR SERVICES</p>
+                        </div>
+                    </div>
+                    <div class="row align-items-center justify-content-center">
+                        <div class="col-sm service service-4">
+                            <p class="">OUR SERVICES</p>
+                        </div>
+                        <div class="col-sm service service-5">
+                            <p class="">OUR SERVICES</p>
+                        </div>
+                        <div class="col-sm service service-6">
+                            <p class="">OUR SERVICES</p>
+                        </div>
                     </div>
                 </div>
             </div>
