--- a/origamispa2.html
+++ b/origamispa2.html
@@ -39,9 +39,13 @@
                     <section>
                         <div class="mb-5 pb-5 splash pt-5">
                             <div class="container text-center">
-                                <h1 class="display-3">ORIGAMI</h1>
-                                <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                                <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
+                                <div class="row justify-content-center">
+                                    <div class="col-md-8">
+                                        
+                                        <h1 class="display-3">ORIGAMI</h1>
+                                        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </section>
