--- a/origamispa2.html
+++ b/origamispa2.html
@@ -103,10 +103,18 @@
                 <div class="container">
                     
                     <div class="row text-center ">
-                        <div class="col-md-6 about-us-image">
-                            <img src="assets/images/about.png">
-                        </div>
-                        <div class="col-md-6">.col-6</div>
+                            <div class="col-md-6">
+                                <div class="about-us">
+                                    
+                                    <img src="assets/images/about.png" >
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="about-us about-us-description ml-5 mr-5">
+                                    <h4>About us</h4>
+                                    <p>Amet minim mollit non deserunt ullamco estsit aliqua dolor do amet sint. Velitofficiaconsequat duis enim velit mollit. Exercitationveniam consequat suntnostrud amet.</p>
+                                </div>
+                            </div>
                     </div>
                 </div>
             </section>
