--- a/origamispa2.html
+++ b/origamispa2.html
@@ -122,13 +122,13 @@
                 
                 <div class="container text-center">
                     
-                    <div class="row ">
+                    <div class="row services">
                         <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
                             <h1 class="display-4">Our Services</h1>
                             <p class="lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row services">
                         <div class="col-3">
                             <img src="assets/images/our-service1.png" >
                         </div>
@@ -136,10 +136,10 @@
                             <img src="assets/images/our-service2.png" >
                         </div>
                         <div class="col-3">
-                            <img src="assets/images/about.png" >
+                            <img src="assets/images/our-service3.png" >
                         </div>
                         <div class="col-3">
-                            <img src="assets/images/about.png" >
+                            <img src="assets/images/our-service4.png" >
                         </div>
                     </div>
                 </div>
