--- a/origamispa2.html
+++ b/origamispa2.html
@@ -130,13 +130,13 @@
                     </div>
                     <div class="row services">
                         <div class="col-3">
-                            <img src="assets/images/our-service1.png" >
-                        </div>
-                        <div class="col-3">
-                            <img src="assets/images/our-service2.png" >
+                            <img class="img-fluid" src="assets/images/our-service2.png" >
                         </div>
                         <div class="col-3">
                             <img src="assets/images/our-service3.png" >
+                        </div>
+                        <div class="col-3">
+                            <img class="img-fluid" src="assets/images/our-service2.png" >
                         </div>
                         <div class="col-3">
                             <img src="assets/images/our-service4.png" >
