--- a/origamispa2.html
+++ b/origamispa2.html
@@ -133,16 +133,31 @@
                             <img class="img-fluid" src="assets/images/our-service2.png" >
                         </div>
                         <div class="col-3">
-                            <img src="assets/images/our-service3.png" >
+                            <img class="img-fluid" src="assets/images/our-service3.png" >
                         </div>
                         <div class="col-3">
                             <img class="img-fluid" src="assets/images/our-service2.png" >
                         </div>
                         <div class="col-3">
-                            <img src="assets/images/our-service4.png" >
+                            <img class="img-fluid" src="assets/images/our-service4.png" >
                         </div>
                     </div>
                 </div>
+                <div class="row services">
+                    <div class="col-12">
+                        
+                        <div class="col-3">
+                            <img class="img-fluid" src="assets/images/our-service3.png" >
+                        </div>
+                        <div class="col-5">
+                            <img class="img-fluid" src="assets/images/our-service2.png" >
+                        </div>
+                        <div class="col-3">
+                            <img class="img-fluid" src="assets/images/our-service4.png" >
+                        </div>
+                    </div>
+                </div>
+                
             </section>
             <section>
                 <div class="container">
