--- a/origamispa2.html
+++ b/origamispa2.html
@@ -149,7 +149,7 @@
                 </div>
                 <div class="container">
                     <div class="row text-center ">
-                        <div class="col-3 offset-1">
+                        <div class="col-sm-3 offset-1">
                             <div class="card">
                                 <img class="img-fluid" src="assets/images/oil-massage.png" >
                                 <div class="card-body">
@@ -157,7 +157,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-sm-4">
                             <div class="card">
                                 <img class="img-fluid" src="assets/images/facial-treatment.png" >
                                 <div class="card-body">
@@ -165,7 +165,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-sm-3">
                             <div class="card">
                                 <img class="img-fluid" src="assets/images/body-streaming.png" >
                                 <div class="card-body">
