--- a/origamispa2.html
+++ b/origamispa2.html
@@ -149,7 +149,7 @@
                 </div>
                 <div class="container">
                     <div class="row text-center ">
-                        <div class="col-sm-3 offset-1">
+                        <div class="col-sm-3 offset-sm-1">
                             <div class="card">
                                 <img class="img-fluid" src="assets/images/oil-massage.png" >
                                 <div class="card-body">
