--- a/origamispa2.html
+++ b/origamispa2.html
@@ -23,7 +23,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         
-                        <ul class="nav justify-content-center align-content-right">
+                        <ul class="nav justify-content-end align-content-right">
   <li class="nav-item">
     <a class="nav-link active" href="#">Active</a>
   </li>
