--- a/origamispa2.html
+++ b/origamispa2.html
@@ -16,14 +16,14 @@
         <section>
             
             <nav class="navbar navbar-dark navbar-expand-md navbar-main">
-                <div class="container">
+                <div class="container justify-content-between">
                     <a class="navbar-brand" href="index.html">ORIGAMI</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">  
                     <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         
-                        <ul class="nav justify-content-between ">
+                        <ul class="nav justify-content-betwee">
   <li class="nav-item">
     <a class="nav-link active" href="#">Active</a>
   </li>
