--- a/origamispa2.html
+++ b/origamispa2.html
@@ -16,11 +16,11 @@
         <section>
             
             <nav class="navbar navbar-dark navbar-expand-md navbar-main">
-                <div class="container justify-content-right">
+                <div class="container justify-content-between">
                     <a class="navbar-brand" href="index.html">ORIGAMI</a>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         
-                        <ul class="nav justify-content-between">
+                        <ul class="nav">
   <li class="nav-item">
     <a class="nav-link active" href="#">Active</a>
   </li>
