--- a/origamispa2.html
+++ b/origamispa2.html
@@ -16,9 +16,9 @@
         <section>
             
             <nav class="navbar navbar-dark navbar-expand-md navbar-main">
-                <div class="container justify-content-between">
+                <div class="container justify-content-betwee">
                     <a class="navbar-brand" href="index.html">ORIGAMI</a>
-                    <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         
                         <ul class="nav">
   <li class="nav-item">
