--- a/origamispa2.html
+++ b/origamispa2.html
@@ -155,7 +155,7 @@
                 </div>
                 <div class="container">
                     <div class="row text-center ">
-                        <div class="col-sm-3 offset-sm-1">
+                        <div class="col-3 offset-1">
                             <div class="card mb-4">
                                 <img class="img-fluid" src="assets/images/oil-massage.png" >
                                 <div class="card-body">
@@ -163,7 +163,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-4">
                             <div class="card mb-4">
                                 <img class="img-fluid" src="assets/images/facial-treatment.png" >
                                 <div class="card-body">
@@ -171,7 +171,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-3">
+                        <div class="col-3">
                             <div class="card mb-4">
                                 <img class="img-fluid" src="assets/images/body-streaming.png" >
                                 <div class="card-body">
