--- a/origamispa2.html
+++ b/origamispa2.html
@@ -154,9 +154,9 @@
                     </div>
                 </div>
                 <div class="container">
-                    <div class="row text-center ">
-                        <div class="col-3 offset-1">
-                            <div class="card mb-4">
+                    <div class="row text-center spa">
+                        <div class="col-3 offset-1 ">
+                            <div class="card mb-3">
                                 <img class="img-fluid" src="assets/images/oil-massage.png" >
                                 <div class="card-body">
                                     <p class="card-title">Oil Massage</p>
@@ -164,7 +164,7 @@
                             </div>
                         </div>
                         <div class="col-4">
-                            <div class="card mb-4">
+                            <div class="card mb-3">
                                 <img class="img-fluid" src="assets/images/facial-treatment.png" >
                                 <div class="card-body">
                                     <p class="card-title">Facial Treatment</p>
@@ -172,7 +172,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <div class="card mb-4">
+                            <div class="card mb-3">
                                 <img class="img-fluid" src="assets/images/body-streaming.png" >
                                 <div class="card-body">
                                     <p class="card-title">Body Steaming</p>
