--- a/origamispa2.html
+++ b/origamispa2.html
@@ -117,7 +117,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="about-us about-us-description ml-5 mr-5 text-left">
-                                <h2>About us</h2>
+                                <h1>About us</h1>
                                 <p>Amet minim mollit non deserunt ullamco estsit aliqua dolor do amet sint. Velitofficiaconsequat duis enim velit mollit. Exercitationveniam consequat suntnostrud amet.</p>
                             </div>
                         </div>
@@ -130,7 +130,7 @@
                     
                     <div class="row services">
                         <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center col-md-8 offset-md-2">
-                            <h1 class="display-4">Our Services</h1>
+                            <h1 class="">Our Services</h1>
                             <p class="lead">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                         </div>
                     </div>
@@ -189,7 +189,7 @@
                     <div class="row text-center ">
                         <div class="col-md-6">
                             <div class="our-products our-products-description ml-5 mr-5 text-left">
-                                <h2>Our Products</h2>
+                                <h1>Our Products</h1>
                                 <p>Amet minim mollit non deserunt ullamco estsit aliqua dolor do amet sint. Velitofficiaconsequat duis enim velit mollit. Exercitationveniam consequat suntnostrud amet.</p>
                             </div>
                         </div>
