--- a/origamispa2.html
+++ b/origamispa2.html
@@ -49,7 +49,7 @@
                                 <div class="col-md-8">
                                     
                                     <h1 class="display-3">ORIGAMI</h1>
-                                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                                    <p>ThisYou think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder.</p>
                                 </div>
                             </div>
                         </div>
