--- a/origamispa2.html
+++ b/origamispa2.html
@@ -49,7 +49,7 @@
                                 <div class="col-md-8">
                                     
                                     <h1 class="display-4">ORIGAMI</h1>
-                                    <p>ThisYou think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder.</p>
+                                    <p>You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder.</p>
                                 </div>
                             </div>
                         </div>
