--- a/origamispa2.html
+++ b/origamispa2.html
@@ -119,7 +119,7 @@
                     <div class="col-md-6">
                         <div class="about-us about-us-description ml-5 mr-5 text-left">
                             <h1>About us</h1>
-                            <p>Amet minim mollit non deserunt ullamco estsit aliqua dolor do amet sint. Velitofficiaconsequat duis enim velit mollit. Exercitationveniam consequat suntnostrud amet.</p>
+                            <p>Despite my reputation, I don't like heights. Especially falling from them. So here's the riddle. What does an eight thousand pound mako shark with a brain the size of a flat head V8 engine and no natural predators think about.</p>
                         </div>
                     </div>
                 </div>
