--- a/origamispa2.html
+++ b/origamispa2.html
@@ -133,7 +133,7 @@
                 <div class="row services">
                     <div class="px-3 py-3 pb-md-4 mx-auto text-center col-md-8 offset-md-2">
                         <h1 class="">Our Services</h1>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                        <p>You wait your whole life for a single moment...and then one day, it's tomorrow. She may be the smartest animal on the planet, but she's still just an animal.</p>
                     </div>
                 </div>
                 <div class="row services services-icons mb-5">
@@ -192,7 +192,7 @@
                     <div class="col-md-6">
                         <div class="our-products our-products-description ml-5 mr-5 text-left">
                             <h1>Our Products</h1>
-                            <p>Amet minim mollit non deserunt ullamco estsit aliqua dolor do amet sint. Velitofficiaconsequat duis enim velit mollit. Exercitationveniam consequat suntnostrud amet.</p>
+                            <p>Einstein's theory of relativity. Grab hold of a hot pan, a second can seem like an hour. Put your hands on a hot woman...an hour can seem like a second. It's all relative.</p>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -200,7 +200,7 @@
                             <div class="justify-content-center row services services-icons">
                                 <div class="col-6">
                                     <img class="img-fluid" src="assets/images/our-service3.png" >
-                                    <p>Body Massage</p>
+                                    <p>Spa</p>
                                 </div>
                                 <div class="col-6">
                                     <img class="img-fluid" src="assets/images/our-service3.png" >
@@ -208,11 +208,11 @@
                                 </div>
                                 <div class="col-6">
                                     <img class="img-fluid" src="assets/images/our-service3.png" >
-                                    <p>Body Massage</p>
+                                    <p>Facial treatment</p>
                                 </div>
                                 <div class="col-6">
                                     <img class="img-fluid" src="assets/images/our-service3.png" >
-                                    <p>Body Massage</p>
+                                    <p>Body steaming</p>
                                 </div>
                             </div>
                         </div>
