--- a/origamispa2.html
+++ b/origamispa2.html
@@ -133,7 +133,7 @@
                 <div class="row services">
                     <div class="px-3 py-3 pb-md-4 mx-auto text-center col-md-8 offset-md-2 mr-4 ml-5">
                         <h1 class="">Our Services</h1>
-                        <p>You wait your whole life for a single moment...and then one day, it's tomorrow. She may be the smartest animal on the planet, but she's still just an animal.</p>
+                        <p class="ml-4 mr-4">You wait your whole life for a single moment...and then one day, it's tomorrow. She may be the smartest animal on the planet, but she's still just an animal.</p>
                     </div>
                 </div>
                 <div class="row services services-icons mb-5">
