--- a/origamispa2.html
+++ b/origamispa2.html
@@ -131,7 +131,7 @@
             <div class="container text-center">
                 
                 <div class="row services">
-                    <div class="px-3py-3 pb-md-4 mx-auto text-center col-md-8 offset-md-2 ">
+                    <div class="px-3 py-3 pb-md-4 mx-auto text-center col-md-8 offset-md-2 ">
                         <h1 class="">Our Services</h1>
                         <p class="ml-4 mr-4">You wait your whole life for a single moment.. and then one day, it's tomorrow. She may be the smartest animal on the planet, but she's still just an animal.</p>
                     </div>
@@ -188,11 +188,11 @@
         <section class="product-section">
             
             <div class="container">
-                <div class="row text-center ">
+                <div class="row">
                     <div class="col-md-6">
                         <div class="our-products our-products-description ml-5 mr-5 ml-sm-0 mr-sm-0 text-right">
                             <h1>Our Products</h1>
-                            <p class="ml-4 mr-4">Einstein's theory of relativity. Grab hold of a hot pan, a second can seem like an hour. Put your hands on a hot woman... an hour can seem like a second. It's all relative.</p>
+                            <p class="">Einstein's theory of relativity. Grab hold of a hot pan, a second can seem like an hour. Put your hands on a hot woman... an hour can seem like a second. It's all relative.</p>
                         </div>
                     </div>
                     <div class="col-md-6">
