--- a/origamispa2.html
+++ b/origamispa2.html
@@ -197,22 +197,19 @@
                     </div>
                     <div class="col-md-6">
                         <div class="our-products">
-                            <div class="justify-content-center row servicesservices-icons">
+                            <div class="justify-content-center row product-icons">
                                 <div class="col-6">
                                     <img class="img-fluid" src="assets/images/our-product1.png" >
-                                    <p>Spa</p>
                                 </div>
                                 <div class="col-6">
                                     <img class="img-fluid" src="assets/images/our-product2.png" >
-                                    <p>Body Massage</p>
                                 </div>
                                 <div class="col-6">
                                     <img class="img-fluid" src="assets/images/our-product3.png" >
-                                    <p>Facial treatment</p>
+                                   
                                 </div>
                                 <div class="col-6">
                                     <img class="img-fluid" src="assets/images/our-product4.png" >
-                                    <p>Body steaming</p>
                                 </div>
                             </div>
                         </div>
