--- a/origamispa2.html
+++ b/origamispa2.html
@@ -189,7 +189,7 @@
             
             <div class="container">
                 <div class="row text-center ">
-                    <div class="col-md-6">
+                    <div class="col-md-4 offset-md-2">
                         <div class="our-products our-products-description ml-5 mr-5 ml-sm-0 mr-sm-0 text-right">
                             <h1>Our Products</h1>
                             <p>Einstein's theory of relativity. Grab hold of a hot pan, a second can seem like an hour. Put your hands on a hot woman... an hour can seem like a second. It's all relative.</p>
