--- a/origamispa2.html
+++ b/origamispa2.html
@@ -139,7 +139,7 @@
                 <div class="row services services-icons mb-5">
                     <div class="col-3">
                         <img class="img-fluid" src="assets/images/our-service3.png" >
-                        <p>Body Massage</p>
+                        <p>Spa</p>
                     </div>
                     <div class="col-3">
                         <img class="img-fluid" src="assets/images/our-service3.png" >
@@ -147,11 +147,11 @@
                     </div>
                     <div class="col-3">
                         <img class="img-fluid" src="assets/images/our-service3.png" >
-                        <p>Body Massage</p>
+                        <p>Facial treatment</p>
                     </div>
                     <div class="col-3">
                         <img class="img-fluid" src="assets/images/our-service3.png" >
-                        <p>Body Massage</p>
+                        <p>Body Steaming</p>
                     </div>
                 </div>
             </div>
