--- a/origamispa2.html
+++ b/origamispa2.html
@@ -111,7 +111,7 @@
                 
                 <div class="row text-center ">
                     <div class="col-md-6">
-                        <div class="about-us mb-3">
+                        <div class="about-us mb-3 mr-sm-0 ml-sm-0">
                             
                             <img src="assets/images/about.png" >
                         </div>
