--- a/origamispa2.html
+++ b/origamispa2.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"    crossorigin="anonymous">
         <!-- Custom C  SS -->
         <link  rel="stylesheet" href="css/origamispa2.css">
-        <title>Origami</title>
+        <title>O r i g a m i - SPA</title>
     </head>
     <body>
         <section>
