--- a/origamispa2.html
+++ b/origamispa2.html
@@ -218,11 +218,11 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="blog-section">
             <div class="container">
                     <div class="card-deck">
                             <div class="card">
-                              <img class="card-img-top" src="..." alt="Card image cap">
+                              <img class="card-img-top" src="assets/images/oil-massage.png" alt="Card image cap">
                               <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -232,7 +232,7 @@
                               </div>
                             </div>
                             <div class="card">
-                              <img class="card-img-top" src="..." alt="Card image cap">
+                              <img class="card-img-top" src="assets/images/oil-massage.png" alt="Card image cap">
                               <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -242,7 +242,7 @@
                               </div>
                             </div>
                             <div class="card">
-                              <img class="card-img-top" src="..." alt="Card image cap">
+                              <img class="card-img-top" src="assets/images/oil-massage.png" alt="Card image cap">
                               <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
