--- a/origamispa2.html
+++ b/origamispa2.html
@@ -207,7 +207,7 @@
                                 </div>
                                 <div class="col-6">
                                     <img class="img-fluid" src="assets/images/our-product3.png" >
-                                   
+                                    
                                 </div>
                                 <div class="col-6">
                                     <img class="img-fluid" src="assets/images/our-product4.png" >
@@ -220,38 +220,39 @@
         </section>
         <section class="blog-section">
             <div class="container">
-                    <div class="card-deck">
-                            <div class="card">
-                              <img class="card-img-top" src="assets/images/oil-massage.png" alt="Card image cap">
-                              <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                              </div>
-                              <div class="card-footer">
-                                <small class="text-muted">Last updated 3 mins ago</small>
-                              </div>
-                            </div>
-                            <div class="card">
-                              <img class="card-img-top" src="assets/images/oil-massage.png" alt="Card image cap">
-                              <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                              </div>
-                              <div class="card-footer">
-                                <small class="text-muted">Last updated 3 mins ago</small>
-                              </div>
-                            </div>
-                            <div class="card">
-                              <img class="card-img-top" src="assets/images/oil-massage.png" alt="Card image cap">
-                              <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                              </div>
-                              <div class="card-footer">
-                                <small class="text-muted">Last updated 3 mins ago</small>
-                              </div>
-                            </div>
-                          </div>
+                <div class="card-deck">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/images/oil-massage.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Nature is lethal but it doesn't hold a candle to man. Sharks never get cancer, go blind or show loss of brain activity as they age. Unlike some people I know.
+</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="assets/images/oil-massage.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="assets/images/oil-massage.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section>
