--- a/origamispa2.html
+++ b/origamispa2.html
@@ -224,7 +224,7 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/images/oil-massage.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">BEAUTY TIPS</h5>
                             <p class="card-text">Nature is lethal but it doesn't hold a candle to man. Sharks never get cancer, go blind or show loss of brain activity as they age. Unlike some people I know.
 </p>
                         </div>
@@ -235,7 +235,7 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/images/oil-massage.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">MAKEUP TUTORIAL</h5>
                             <p class="card-text">After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other</p>
                         </div>
                         <div class="card-footer">
@@ -245,7 +245,7 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/images/oil-massage.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">WHAT ARE ORGANICS?</h5>
                             <p class="card-text">but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two</p>
                         </div>
                         <div class="card-footer">
