--- a/origamispa2.html
+++ b/origamispa2.html
@@ -193,7 +193,7 @@
                     <div class="col-md-5 offset-md-1">
                         <div class="our-products our-products-description ml-5 mr-5 ml-sm-0 mr-sm-0 text-right">
                             <h1>Our Products</h1>
-                            <p>Einstein's theory of relativity. Grab hold of a hot pan, a second can seem like an hour. Put your hands on a hot woman... an hour can seem like a second. It's all relative.</p>
+                            <p>Einstein's theory of relativity. Grab hold of a hot pan, a second can seem like an hour. Put your hands on a hot woman... an hour can seem like a second. It's all relative. Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.</p>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -220,20 +220,20 @@
         </section>
         <section class="blog-section">
             <div class="container">
+
                 <div class="card-deck">
                     <div class="card">
-                        <img class="card-img-top" src="assets/images/oil-massage.png" alt="Card image cap">
+                        <img class="card-img-top" src="assets/images/blog1.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">BEAUTY TIPS</h5>
-                            <p class="card-text">Nature is lethal but it doesn't hold a candle to man. Sharks never get cancer, go blind or show loss of brain activity as they age. Unlike some people I know.
-</p>
+                            <p class="card-text">Nature is lethal but it doesn't hold a candle to man. Sharks never get cancer, go blind or show loss of brain activity as they age. Unlike some people I know.</p>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="assets/images/oil-massage.png" alt="Card image cap">
+                        <img class="card-img-top" src="assets/images/blog2.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">MAKEUP TUTORIAL</h5>
                             <p class="card-text">After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other</p>
@@ -243,7 +243,49 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="assets/images/oil-massage.png" alt="Card image cap">
+                        <img class="card-img-top" src="assets/images/blog3.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">WHAT ARE ORGANICS?</h5>
+                            <p class="card-text">but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-deck">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/images/blog1.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">BEAUTY TIPS</h5>
+                            <p class="card-text">Nature is lethal but it doesn't hold a candle to man. Sharks never get cancer, go blind or show loss of brain activity as they age. Unlike some people I know.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="assets/images/blog1.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">BEAUTY TIPS</h5>
+                            <p class="card-text">Nature is lethal but it doesn't hold a candle to man. Sharks never get cancer, go blind or show loss of brain activity as they age. Unlike some people I know.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="assets/images/blog2.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">MAKEUP TUTORIAL</h5>
+                            <p class="card-text">After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="assets/images/blog3.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">WHAT ARE ORGANICS?</h5>
                             <p class="card-text">but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two</p>
