--- a/origamispa2.html
+++ b/origamispa2.html
@@ -131,7 +131,7 @@
             
             <div class="container text-center">
                 
-                <div class="row services">
+                <div class="row services animated fadeIn">
                     <div class="px-3 py-3 pb-md-4 mx-auto text-center col-md-8 offset-md-2 ">
                         <h1 class="">Our Services</h1>
                         <p class="ml-4 mr-4">You wait your whole life for a single moment.. and then one day, it's tomorrow. She may be the smartest animal on the planet, but she's still just an animal.</p>
@@ -193,7 +193,7 @@
                     <div class="col-md-5 offset-md-1">
                         <div class="our-products our-products-description ml-5 mr-5 ml-sm-0 mr-sm-0 text-right">
                             <h1>Our Products</h1>
-                            <p>Einstein's theory of relativity. Grab hold of a hot pan, a second can seem like an hour. Put your hands on a hot woman... an hour can seem like a second. It's all relative. Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.</p>
+                            <p>Einstein's theory of relativity. Grab hold of a hot pan, a second can seem like an hour. Put your hands on a hot woman... an hour can seem like a second. It's all relative. Einstein's theory of relativity. Grab hold of a hot pan, a second can seem like an hour. Put your hands on a hot woman... an hour can seem like a second. It's all relative.</p>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -220,7 +220,6 @@
         </section>
         <section class="blog-section">
             <div class="container">
-
                 <div class="card-deck">
                     <div class="card">
                         <img class="card-img-top" src="assets/images/blog1.png" alt="Card image cap">
