--- a/origamispa2.html
+++ b/origamispa2.html
@@ -218,7 +218,7 @@
                 </div>
             </div>
         </section>
-        <section class="blog-section">
+        <!-- <section class="blog-section">
             <div class="container">
                 <div class="card-deck">
                     <div class="card">
@@ -295,7 +295,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <section>
             <div class="container">
                 <footer class="pt-4 my-md-5 pt-md-5 border-top">
